<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".presentation.home.crud_counter.CrudFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/crud_fragment_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:text="@string/select_the_item_to_be_modified"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/crud_fragment_ll_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/id"
                    android:textColor="@color/purple_700"
                    style="@style/TextAppearance.Material3.TitleMedium" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title"
                    android:textColor="@color/purple_700"
                    style="@style/TextAppearance.Material3.TitleMedium" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/count"
                    android:textColor="@color/purple_700"
                    style="@style/TextAppearance.Material3.TitleMedium" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/crud_fragment_rv_counters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_counter"
                tools:itemCount="5" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>